Another fix for this damned attention boiunce animation to stop cropping of content'' on the input hover

--- a/p4m-shared/p4m.scss
+++ b/p4m-shared/p4m.scss
@@ -792,17 +792,17 @@ a, a:visited {
 //   to { transform: translate(0, 0); }
 // }
 @keyframes attnRightBounce {
-  from { transform: translate(100%, 0); animation-timing-function: ease-out;}
-  50% { transform: translate(102%, 0); animation-timing-function: ease-in;}
-  to { transform: translate(100%, 0); animation-timing-function: ease-out;}
+  from { transform: translate(0, 0); animation-timing-function: ease-out;}
+  50% { transform: translate(5px, 0); animation-timing-function: ease-in;}
+  to { transform: translate(0, 0); animation-timing-function: ease-out;}
 }
 @keyframes attnRightBounceAfter {
   // from { right: -7px; }
   // 50% { right: -12px; }
   // to { right: -7px; }
-  from { transform: translate(15%, 0); animation-timing-function: ease-out;}
-  50% { transform: translate(150%, 0); animation-timing-function: ease-in;}
-  to { transform: translate(15%, 0); animation-timing-function: ease-out;}
+  from { transform: translate(1px, 0); animation-timing-function: ease-out;}
+  50% { transform: translate(6px, 0); animation-timing-function: ease-in;}
+  to { transform: translate(1px, 0); animation-timing-function: ease-out;}
 }
 
 // [data-tooltip][class*="attn"]:before {
@@ -813,23 +813,32 @@ a, a:visited {
 //   animation-timing-function: ease-in-out;
 // }
 
-[data-tooltip].attnRight:before {
+[data-tooltip].tooltip-right.attnRight:before {
   visibility: visible !important;
   opacity: 1;
   background: #e83e3e !important;
   font-size: 14px;
   padding: 2px 8px;
+  transform: translate(0, 0);
+  left: 100%;
+  right: initial !important;
+  margin-left: 5px;
 
   animation-name: attnRightBounce;
+  transform-origin: center left;
   animation-duration: 1.2s;
   animation-iteration-count: infinite !important;
   box-shadow: 0 3px 5px rgba(100,100,100,0.4);
 }
 
-[data-tooltip].attnRight:after {
+[data-tooltip].tooltip-right.attnRight:after {
   visibility: visible !important;
   border-right-color: #e83e3e !important;
   opacity: 1;
+  left: 100%;
+  right: initial !important;
+  margin-left: 1px;
+  transform-origin: center left;
   animation-name: attnRightBounceAfter !important;
   animation-duration: 1.2s;
   animation-iteration-count: infinite;
@@ -1073,6 +1082,7 @@ p4m-spinner[species='progress'] {
     &.tooltip-right {
       &:after {
         border-top: 4px solid transparent;
+        border-right: 4px solid transparent;
         border-bottom: 4px solid transparent;
         border-right-color: #37a553;
         border-left: none;
@@ -1081,6 +1091,7 @@ p4m-spinner[species='progress'] {
     &.tooltip-left {
       &:after {
         border-top: 4px solid transparent;
+        border-right: 4px solid transparent;
         border-bottom: 4px solid transparent;
         border-left-color: #37a553;
         border-right: none;
